Modifying main.py to make it more modular, can now be called from other scripts. Adding test/test_iclamp.py to run and save iclamp protocol

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 /NEURON/temp.pkl
-/NEURON/saveClass.pyc
-/NEURON/libcell.pyc
+/NEURON/*.pyc
 /NEURON/test/*.dat
+/NEURON/test/*.pkl
 *.bak
 *~
 generatedNeuroML
