--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,9 @@ python: 2.7
 
 env:
     - OMV_ENGINE=PyNEURON
-    #- OMV_ENGINE=jNeuroML
-    #- OMV_ENGINE=jNeuroML_NEURON
+    - OMV_ENGINE=jNeuroML
+    - OMV_ENGINE=jNeuroML_NEURON
     #- OMV_ENGINE=jNeuroML_validate
-    #- OMV_ENGINE=jNeuroML_validatev1
 
 install: 
     - pip install git+https://github.com/OpenSourceBrain/osb-model-validation
