Adding test on original cell

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,8 +13,9 @@ env:
 
 install: 
     - pip install git+https://github.com/OpenSourceBrain/osb-model-validation
+    
+    # Need to pre install NEURON so nrnivmodl can be run targeting mod files in a different directory
     - omv install NEURON
-    - pwd
     - cd NEURON/test
     - /home/travis/neuron/nrn/x86_64/bin/nrnivmodl ../mod.files
     - ls -alt
