Add Brian to pre install

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,8 @@ env:
 install: 
     - pip install git+https://github.com/OpenSourceBrain/osb-model-validation
     
+    # Brian required by PyNEURON script also...
+    - omv install Brian
     # Need to pre install NEURON so nrnivmodl can be run targeting mod files in a different directory
     - omv install NEURON
     - cd NEURON/test
