Adding install for scipy
Moving test to test dir

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,15 @@
 
 sudo: false
 
+addons:
+  apt:
+    packages:
+       # Requirements for Brian
+    - python-numpy 
+    - python-scipy 
+    - python-matplotlib 
+    - python-sympy
+
 language: python
 python: 2.7
 
