--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,9 @@ addons:
 language: python
 python: 2.7
 
+virtualenv:
+    system_site_packages: true
+
 env:
     - OMV_ENGINE=PyNEURON
     - OMV_ENGINE=jNeuroML
