--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,8 @@ env:
     - OMV_ENGINE=jNeuroML_NetPyNE
     - OMV_ENGINE=jNeuroML_validate
 
-install: 
+install:     
+    - pip install kiwisolver==1.1.0 #  Temporary, due to issues with 1.2.0
     - pip install git+https://github.com/OpenSourceBrain/osb-model-validation
     
     # Need to pre install NEURON so nrnivmodl can be run targeting mod files in a different directory
