--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,4 @@ generatedNeuroML2
 /NeuroML2/notebooks/report*.txt
 /NeuroML2/notebooks/LEMS_SimIClamp.xml
 /NeuroML2/notebooks/IClamp.net.nml
+__pycache__
