--- a/.travis.yml
+++ b/.travis.yml
@@ -32,13 +32,13 @@ install:
     # Need to pre install NEURON so nrnivmodl can be run targeting mod files in a different directory
     - omv install NEURON
     - cd NEURON/test
-    - which nrnivmodl
     - /home/travis/neuron/nrn/x86_64/bin/nrnivmodl ../mod.files
     - ls -alt
     - cd ../..
 
 script:
     - omv all -V
+    - which nrnivmodl -a || true
     
     
     
