--- a/.github/workflows/omv-ci.yml
+++ b/.github/workflows/omv-ci.yml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: [ 3.7, 3.9 ]
+        python-version: [ 3.9 ]
         engine: [ PyNEURON, jNeuroML, jNeuroML_NEURON, jNeuroML_NetPyNE, jNeuroML_validate ]
 
     steps:
@@ -30,6 +30,8 @@ jobs:
         pip install git+https://github.com/OpenSourceBrain/osb-model-validation
         pip install scipy sympy matplotlib cython pandas tables
         
+        pip install 'numpy<=1.23.0' # see https://github.com/OpenSourceBrain/osb-model-validation/issues/91
+
 
     - name: Compile some mod files
       if: ${{ matrix.engine == 'PyNEURON' }}
