--- a/.github/workflows/omv-ci.yml
+++ b/.github/workflows/omv-ci.yml
@@ -34,7 +34,7 @@ jobs:
 
 
     - name: Compile some mod files
-      if: ${{ matrix.engine == 'PyNEURON' }}
+      if: ${{ contains( 'PyNEURON', matrix.engine ) }}
       run: |
         omv install NEURON
         cd NEURON/test
