--- a/.github/workflows/omv-ci.yml
+++ b/.github/workflows/omv-ci.yml
@@ -30,11 +30,11 @@ jobs:
         pip install git+https://github.com/OpenSourceBrain/osb-model-validation
         pip install scipy sympy matplotlib cython pandas tables
         
-        pip install 'numpy<=1.23.0' # see https://github.com/OpenSourceBrain/osb-model-validation/issues/91
+        pip install numpy==1.16.1 # needed for NEURON/main.py
 
 
     - name: Compile some mod files
-      if: ${{ contains( 'PyNEURON', matrix.engine ) }}
+      if: ${{ contains( matrix.engine, 'PyNEURON' ) }}
       run: |
         omv install NEURON
         cd NEURON/test
